AC_PREREQ([2.68])
AC_INIT([klogger],
	[1.0.0],
	[coder@kyleisom.net],
	[klogger],
	[https://git.kyleisom.net/lib/libklogger])
AM_INIT_AUTOMAKE([1.11 foreign])

AC_CONFIG_SRCDIR([src/klogger/logger.hh])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_MACRO_DIR([m4])

AC_CHECK_HEADERS

AC_PROG_CXX
AC_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_OUTPUT
